# SIGNIA

./: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  e2e.yml  release.yml  solana-program.yml
crates/signia-api/: Cargo.toml  README.md
crates/signia-api/src/: app.rs  config.rs  error.rs  main.rs  state.rs  telemetry.rs
crates/signia-api/src/dto/: requests.rs  responses.rs
crates/signia-api/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs  request_id.rs
crates/signia-api/src/routes/: artifacts.rs  compile.rs  health.rs  mod.rs  plugins.rs  registry.rs  verify.rs
crates/signia-core/: README.md
crates/signia-store/: Cargo.toml  README.md
crates/signia-store/src/: lib.rs
crates/signia-store/src/cache/: content_addressed.rs  mod.rs
crates/signia-store/src/kv/: memory.rs  mod.rs  sqlite.rs
crates/signia-store/src/kv/migrations/: 0001_init.sql  0002_indexes.sql
crates/signia-store/src/objects/: fs.rs  layout.rs  mod.rs  s3.rs
crates/signia-store/src/proofs/: merkle.rs  mod.rs  verify.rs
docs/: architecture.md  faq.md  index.md
docs/ determinism/: hashing.md  reproducible-builds.md
docs/ security/: responsible-disclosure.md  threat-model.md
docs/cli/: recipes.md
docs/console/: deployment.md  overview.md
docs/onchain/: registry-program.md
docs/plugins/: builtin-plugins.md  plugin-spec.md  sandboxing.md  writing-a-plugin.md
docs/schemas/: manifest-v1.md  proof-v1.md
examples/: README.md
examples/dataset/: run.sh  sample.csv
examples/openapi/: petstore.yaml  run.sh
examples/repo-github/: README.md  input.txt  run.sh
examples/workflow/: pipeline.yml  run.sh
infra/docker/: api.Dockerfile  console.Dockerfile  interface.Dockerfile
infra/k8s/: api-deployment.yaml  console-deployment.yaml  ingress.yaml  interface-deployment.yaml  namespace.yaml
infra/terraform/: README.md
scripts/: anchor_build.sh  bootstrap.sh  build_all.sh  devnet_airdrop.sh  generate_openapi.sh  lint_all.sh  local_solana.sh  release.sh  test_all.sh
signia-registry/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
signia-registry/src/: constants.rs  errors.rs  lib.rs
signia-registry/src/instructions/: init_registry.rs  mod.rs  publish_version.rs  register_schema.rs  revoke_entry.rs  transfer_authority.rs
signia-registry/src/state/: authority.rs  entry.rs  mod.rs  registry.rs
signia-registry/src/utils/: hashing.rs  mod.rs  validation.rs
signia-registry/tests/: registry.spec.ts  utils.ts
signia-registry/tests/fixtures/: README.md
signia-sdk/python/: README.md  pyproject.toml
(+82 files in other folders)
