[package]
name = "signia-registry"
version = "0.1.0"
description = "SIGNIA on-chain registry (Anchor)"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "signia_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
hex = { version = "0.4", default-features = false }
