[package]
name = "signia-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HTTP API for SIGNIA (compile, verify, artifacts, plugins, registry)"
repository = "https://github.com/your-org/signia"
readme = "README.md"

[features]
default = ["engine"]
engine = []

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["std"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Workspace crates
signia-core = { path = "../signia-core" }
signia-plugins = { path = "../signia-plugins" }
signia-store = { path = "../signia-store" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tempfile = "3"
