[package]
name = "signia-store"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deterministic local persistence and artifact storage for SIGNIA"
repository = "https://github.com/your-org/signia"
readme = "README.md"

[features]
default = ["sqlite", "fs"]
sqlite = ["dep:rusqlite"]
fs = []
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:bytes", "dep:tokio"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
bytesize = "1"
parking_lot = "0.12"
walkdir = "2"

rusqlite = { version = "0.31", optional = true, features = ["bundled"] }

aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
bytes = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
